add blue elephant picture

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             <li>Java</li>
             <li>HTML</li>
         </ul>
+        <img src="photo.png" alt="A picture of a blue elephant">
     </body>
 </html>
