put the picture under a drop down tab

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <li>Java</li>
             <li>HTML</li>
         </ul>
-        <img src="photo.png" alt="A picture of a blue elephant">
+        <details>
+            <summary>Click me to see a picture</summary>
+            <img src="photo.png" alt="A picture of a blue elephant">
+        </details>
     </body>
 </html>
