--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>My First Web Page</title>
     </head>
     <body>
+        <h1>Welcome To My Website!</h1>
+        <p>There's nothing here yet but there will be soon :D</p>
         <h1>Languages I Know</h1>
         <ul>
             <li>English</li>
