made the portfolio and actual portfolio

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <title>My First Web Page</title>
+        <title>Parker's Portfolio</title>
     </head>
     <body>
         <h1>Welcome To My Website!</h1>
-        <p>There's nothing here yet but there will be soon :D</p>
-        <h1>Languages I Know</h1>
+        <h3>Other Pages</h3>
         <ul>
-            <li>English</li>
-            <li>Latin</li>
-            <li>Java</li>
-            <li>HTML</li>
+            <li><a href="about.html" target="_blank">About</a></li>
         </ul>
         <details>
             <summary>Click me to see a picture</summary>
             <img src="photo.png" alt="A picture of a blue elephant">
         </details>
+        <p>Hi I'm Parker! I am a rising senior at Edgemont High School in Scarsdale, New York. I play tennis and I am on the Robotics Team at my school. I love computer science and am excited to learn more in this course!</p>
+        <h3>Things I Like</h3>
+        <ul>
+            <li>Video games</li>
+            <li>Learning new languages</li>
+            <li>Dungeons and Dragons</li>
+            <li>Playing with my dog</li>
+        </ul>
+        <h3>Things I Dislike</h3>
+        <ul>
+            <li>Talking about myself</li>
+            <li>Hot weather</li>
+        </ul>
     </body>
 </html>
