--- a/index.html
+++ b/index.html
@@ -2,29 +2,35 @@
 <html lang="en-us">
     <head>
         <title>Parker's Portfolio</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Welcome To My Website!</h1>
-        <h3>Other Pages</h3>
-        <ul>
-            <li><a href="about.html" target="_blank">About</a></li>
-        </ul>
+        <div class="links">
+            <h3>Other Pages</h3>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </div>
         <details>
             <summary>Click me to see a picture</summary>
             <img src="photo.png" alt="A picture of a blue elephant">
         </details>
-        <p>Hi I'm Parker! I am a rising senior at Edgemont High School in Scarsdale, New York. I play tennis and I am on the Robotics Team at my school. I love computer science and am excited to learn more in this course!</p>
-        <h3>Things I Like</h3>
-        <ul>
-            <li>Video games</li>
-            <li>Learning new languages</li>
-            <li>Dungeons and Dragons</li>
-            <li>Playing with my dog</li>
-        </ul>
-        <h3>Things I Dislike</h3>
-        <ul>
-            <li>Talking about myself</li>
-            <li>Hot weather</li>
-        </ul>
+        <div class="bio">
+            <p>Hi I'm Parker! I am a rising senior at Edgemont High School in Scarsdale, New York. I play tennis and I am on the Robotics Team at my school. I love computer science and am excited to learn more in this course!</p>
+            <h3>Things I Like</h3>
+            <ul>
+                <li>Video games</li>
+                <li>Learning new languages</li>
+                <li>Dungeons and Dragons</li>
+                <li>Playing with my dog</li>
+            </ul>
+            <h3>Things I Dislike</h3>
+            <ul>
+                <li>Talking about myself</li>
+                <li>Hot weather</li>
+            </ul>
+        </div>
     </body>
 </html>
