added a little more css and made the portfolio more me

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <div class="links">
             <h3>Other Pages</h3>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="league.html">League</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </div>
         <details>
             <summary>Click me to see a picture</summary>
-            <img src="photo.png" alt="A picture of a blue elephant">
+            <img src="photo.png" alt="A picture of a blue elephant" id="elephant">
         </details>
         <div class="bio">
             <p>Hi I'm Parker! I am a rising senior at Edgemont High School in Scarsdale, New York. I play tennis and I am on the Robotics Team at my school. I love computer science and am excited to learn more in this course!</p>
