changed the about page to a league page

--- a/league.html
+++ b/league.html
@@ -2,9 +2,46 @@
 <html lang="en-us">
     <head>
         <title>League</title>
+        <link href="leaguestyle.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>League</h1>
-        <a href="index.html">Click me to go back</a>
+        <div id="header">
+            <h1>LEAGUE</h1>
+            <a href="index.html">Click me to go back</a>
+        </div>
+        <h2>Bard</h2>
+        <p>Q > W > E</p>
+        <h3>Electrocute</h3>
+        <h3>Guardian</h3>
+        <ul>
+            <li>Spellthief's</li>
+            <li>Lucidity Boots</li>
+        </ul>
+        <h2>Brand unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Fiddlesticks unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Galio unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Lulu unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Nautilus unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Nunu and Willump unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Pyke unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Rakan unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Rell unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Sejuani unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Skarner unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Tristana unfinished</h2>
+        <p>Q > W > E</p>
+        <h2>Twitch unfinished</h2>
+        <p>Q > W > E</p>
     </body>
 </html>
