finished bard, added bootstrap to the league page

--- a/league.html
+++ b/league.html
@@ -1,47 +1,81 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <title>League</title>
-        <link href="leaguestyle.css" type="text/css" rel="stylesheet">
-    </head>
-    <body>
-        <div id="header">
-            <h1>LEAGUE</h1>
-            <a href="index.html">Click me to go back</a>
-        </div>
-        <h2>Bard</h2>
-        <p>Q > W > E</p>
-        <h3>Electrocute</h3>
-        <h3>Guardian</h3>
-        <ul>
-            <li>Spellthief's</li>
-            <li>Lucidity Boots</li>
-        </ul>
-        <h2>Brand unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Fiddlesticks unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Galio unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Lulu unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Nautilus unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Nunu and Willump unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Pyke unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Rakan unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Rell unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Sejuani unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Skarner unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Tristana unfinished</h2>
-        <p>Q > W > E</p>
-        <h2>Twitch unfinished</h2>
-        <p>Q > W > E</p>
-    </body>
+  <head>
+    <title>League</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <style>
+      #header {
+        text-align: center;
+      }
+      body {
+        background-color: #24639f;
+        color: #ffdc00;
+      }
+      .img-thumbnail {
+        background-color: cornflowerblue;
+        border-color: cornflowerblue;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="header">
+      <h1>LEAGUE</h1>
+      <a href="index.html">Click me to go back</a>
+    </div>
+    <h2>Bard</h2>
+    <p>Q > W > E</p>
+    <h3>Electrocute</h3>
+    <img src="bard-electrocute.png" class="img-thumbnail" alt="..." />
+    <h4>Items</h4>
+    <ul>
+      <li>Spellthief's</li>
+      <li>Lucidities</li>
+      <li>Shurelya's</li>
+      <li>Cosmic Drive</li>
+      <li>Frozen Heart</li>
+      <li>Abyssal</li>
+    </ul>
+    <h3>Guardian</h3>
+    <img src="bard-guardian.png" class="img-thumbnail" alt="..." />
+    <h4>Items</h4>
+    <ul>
+      <li>Spellthief's</li>
+      <li>Lucidities</li>
+      <li>Locket</li>
+      <li>Anathema's</li>
+      <li>Frozen Heart</li>
+      <li>Abyssal</li>
+    </ul>
+    <h2>Brand unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Fiddlesticks unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Galio unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Lulu unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Nautilus unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Nunu and Willump unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Pyke unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Rakan unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Rell unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Sejuani unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Skarner unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Tristana unfinished</h2>
+    <p>Q > W > E</p>
+    <h2>Twitch unfinished</h2>
+    <p>Q > W > E</p>
+  </body>
 </html>
