combined css and bootstrap, added table of contents/divs for each champ

--- a/league.html
+++ b/league.html
@@ -8,74 +8,106 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <style>
-      #header {
-        text-align: center;
-      }
-      body {
-        background-color: #24639f;
-        color: #ffdc00;
-      }
-      .img-thumbnail {
-        background-color: cornflowerblue;
-        border-color: cornflowerblue;
-      }
-    </style>
+    <link href="leaguestyle.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="header">
       <h1>LEAGUE</h1>
       <a href="index.html">Click me to go back</a>
+      <h2>CHAMPS</h2>
+      <a href="#bard">Bard</a>
+      <a href="#brand">Brand</a>
+      <a href="#fiddle">Fiddlesticks</a>
+      <a href="#galio">Galio</a>
+      <a href="#lulu">Lulu</a>
+      <a href="#naut">Nautilus</a>
+      <a href="#nunu">Nunu and Willump</a>
+      <a href="#pyke">Pyke</a>
+      <a href="#rakan">Rakan</a>
+      <a href="#rell">Rell</a>
+      <a href="#sej">Sejuani</a>
+      <a href="#skarner">Skarner</a>
+      <a href="#trist">Tristana</a>
+      <a href="#twitch">Twitch</a>
+
     </div>
-    <h2>Bard</h2>
-    <p>Q > W > E</p>
-    <h3>Electrocute</h3>
-    <img src="bard-electrocute.png" class="img-thumbnail" alt="..." />
-    <h4>Items</h4>
-    <ul>
-      <li>Spellthief's</li>
-      <li>Lucidities</li>
-      <li>Shurelya's</li>
-      <li>Cosmic Drive</li>
-      <li>Frozen Heart</li>
-      <li>Abyssal</li>
-    </ul>
-    <h3>Guardian</h3>
-    <img src="bard-guardian.png" class="img-thumbnail" alt="..." />
-    <h4>Items</h4>
-    <ul>
-      <li>Spellthief's</li>
-      <li>Lucidities</li>
-      <li>Locket</li>
-      <li>Anathema's</li>
-      <li>Frozen Heart</li>
-      <li>Abyssal</li>
-    </ul>
-    <h2>Brand unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Fiddlesticks unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Galio unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Lulu unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Nautilus unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Nunu and Willump unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Pyke unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Rakan unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Rell unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Sejuani unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Skarner unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Tristana unfinished</h2>
-    <p>Q > W > E</p>
-    <h2>Twitch unfinished</h2>
-    <p>Q > W > E</p>
+    <div id="bard">
+      <h2>Bard</h2>
+      <p>Q > W > E</p>
+      <h3>Electrocute</h3>
+      <img src="bard-electrocute.png" class="img-thumbnail" alt="..." />
+      <h4>Items</h4>
+      <ul>
+        <li>Spellthief's</li>
+        <li>Lucidities</li>
+        <li>Shurelya's</li>
+        <li>Cosmic Drive</li>
+        <li>Frozen Heart</li>
+        <li>Abyssal</li>
+      </ul>
+      <h3>Guardian</h3>
+      <img src="bard-guardian.png" class="img-thumbnail" alt="..." />
+      <h4>Items</h4>
+      <ul>
+        <li>Spellthief's</li>
+        <li>Lucidities</li>
+        <li>Locket</li>
+        <li>Anathema's</li>
+        <li>Frozen Heart</li>
+        <li>Abyssal</li>
+      </ul>
+    </div>
+    <div id="brand">
+      <h2>Brand unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="fiddle">
+      <h2>Fiddlesticks unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="galio">
+      <h2>Galio unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="lulu">
+      <h2>Lulu unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="naut">
+      <h2>Nautilus unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="nunu">
+      <h2>Nunu and Willump unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="pyke">
+      <h2>Pyke unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="rakan">
+      <h2>Rakan unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="rell">
+      <h2>Rell unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="sej">
+      <h2>Sejuani unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="skarner">
+      <h2>Skarner unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="trist">
+      <h2>Tristana unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
+    <div id="twitch">
+      <h2>Twitch unfinished</h2>
+      <p>Q > W > E</p>
+    </div>
   </body>
 </html>
