--- a/league.html
+++ b/league.html
@@ -2,12 +2,6 @@
 <html lang="en-us">
   <head>
     <title>League</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
     <link href="leaguestyle.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -35,7 +29,7 @@
       <h2>Bard</h2>
       <p>Q > W > E</p>
       <h3>Electrocute</h3>
-      <img src="bard-electrocute.png" class="img-thumbnail" alt="..." />
+      <img src="bard-electrocute.png" alt="..."/>
       <h4>Items</h4>
       <ul>
         <li>Spellthief's</li>
@@ -46,7 +40,7 @@
         <li>Abyssal</li>
       </ul>
       <h3>Guardian</h3>
-      <img src="bard-guardian.png" class="img-thumbnail" alt="..." />
+      <img src="bard-guardian.png" alt="..."/>
       <h4>Items</h4>
       <ul>
         <li>Spellthief's</li>
